force-app/main/default/objects/FNS_FinancialAccountTransaction__c/FNS_FinancialAccountTransaction__c.object-meta.xml
<CustomObject>
    <label>Loan (NonFSC)</label>
    <nameField>
        <label>Loan Name</label>
        <type>AutoNumber</type>
	<displayFormat>FAT -{0000}</displayFormat>
    </nameField>
    <pluralLabel>Loans (NonFSC)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>