force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_Account__c.field-meta.xml
<CustomField>
    <fullName>FNS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Loans</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Loans</relationshipLabel>
    <relationshipName>AccountLoans</relationshipName>
    <type>Lookup</type>
</CustomField>