force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_Amount__c.field-meta.xml
<CustomField>
    <fullName>FNS_Amount__c</fullName>
    <label>Loan Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>