force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_Application__c.field-meta.xml
<CustomField>
    <fullName>FNS_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Application Loan</relationshipLabel>
    <relationshipName>Financial_Account_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>