force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>FNS_EffectiveDate__c</fullName>
    <label>Effective Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>