force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_FinancialAccountTransactionExtId__c.field-meta.xml
<CustomField>
    <fullName>FNS_FinancialAccountTransactionExtId__c</fullName>
    <externalId>true</externalId>
    <label>Loan Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>