force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_LoanProductType__c.field-meta.xml
<CustomField>
    <fullName>FNS_LoanProductType__c</fullName>
    <label>Loan Product Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_ProductType</valueSetName>
    </valueSet>
</CustomField>