force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_LoanPurpose__c.field-meta.xml
<CustomField>
   <fullName>FNS_LoanPurpose__c</fullName>
    <label>Loan Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_Purpose</valueSetName>
    </valueSet>

</CustomField>