force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_LoanSecondaryPurpose__c.field-meta.xml
<CustomField>
    <fullName>FNS_LoanSecondaryPurpose__c</fullName>
    <label>Loan Secondary Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>