force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_PricingFrequency__c.field-meta.xml
<CustomField>
    <fullName>FNS_PricingFrequency__c</fullName>
    <label>Pricing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_Frequency</valueSetName>
    </valueSet>
</CustomField>