force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_PricingType__c.field-meta.xml
<CustomField>
    <fullName>FNS_PricingType__c</fullName>
    <label>Pricing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_PricingType</valueSetName>
    </valueSet>
</CustomField>