force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_ProductAmount__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProductAmount__c</fullName>
    <formula>FNS_FinancialAccount__r.FNS_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>