force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_ProductApplication__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProductApplication__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; FNS_FinancialAccount__r.FNS_Application__r.Id, FNS_FinancialAccount__r.FNS_Application__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Application</label>
    <type>Text</type>
</CustomField>