force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_ProductCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProductCreatedBy__c</fullName>
    <formula>hyperlink(&quot;/&quot;&amp; FNS_FinancialAccount__r.Owner:User.Id ,(FNS_FinancialAccount__r.CreatedBy.FirstName +  FNS_FinancialAccount__r.CreatedBy.LastName)) + &#39;, &#39; + TEXT (DATEVALUE(FNS_FinancialAccount__r.CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By</label>
    <type>Text</type>
</CustomField>