force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_ProductLastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProductLastModifiedBy__c</fullName>
    <formula>hyperlink(&quot;/&quot;&amp; FNS_FinancialAccount__r.Owner:User.Id ,(FNS_FinancialAccount__r.LastModifiedBy.FirstName +  FNS_FinancialAccount__r.LastModifiedBy.LastName)) + &#39;, &#39; + TEXT( DATEVALUE(LastModifiedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified By</label>
    <type>Text</type>
</CustomField>