force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_ProductMaturityDate__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProductMaturityDate__c</fullName>
    <formula>FNS_FinancialAccount__r.FNS_MaturityDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maturity Date</label>
    <type>DateTime</type>
</CustomField>