force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_ProductOwner__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProductOwner__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; FNS_FinancialAccount__r.Owner:User.Id, (FNS_FinancialAccount__r.Owner:User.FirstName +  FNS_FinancialAccount__r.Owner:User.LastName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Owner</label>
    <type>Text</type>
</CustomField>