force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_ProductPurpose__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProductPurpose__c</fullName>
    <formula>TEXT(FNS_FinancialAccount__r.FNS_Purpose__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purpose</label>
    <type>Text</type>
</CustomField>