force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_ProductRateType__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProductRateType__c</fullName>
    <formula>TEXT( FNS_FinancialAccount__r.FNS_RateType__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Type</label>
    <type>Text</type>
</CustomField>