force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_ProductRequestedClosingDate__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProductRequestedClosingDate__c</fullName>
    <formula>FNS_FinancialAccount__r.FNS_RequestedClosingDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Closing Date</label>
    <type>Date</type>
</CustomField>