force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_ProductTerm__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProductTerm__c</fullName>
    <formula>FNS_FinancialAccount__r.FNS_Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term</label>
    <type>Text</type>
</CustomField>