force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_ProductTermUnit__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProductTermUnit__c</fullName>
    <formula>TEXT( FNS_FinancialAccount__r.FNS_TermUnit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term Unit</label>
    <type>Text</type>
</CustomField>