force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_ProductType__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProductType__c</fullName>
    <formula>TEXT(FNS_FinancialAccount__r.FNS_ProductType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>