force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_RateType__c.field-meta.xml
<CustomField>
    <fullName>FNS_RateType__c</fullName>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
                <default>true</default>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>