force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_RequestedDate__c.field-meta.xml
<CustomField>
    <fullName>FNS_RequestedDate__c</fullName>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>