force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_Term__c.field-meta.xml
<CustomField>
    <fullName>FNS_Term__c</fullName>
    <label>Loan Term</label>
    <length>50</length>
    <type>Text</type>
</CustomField>