force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_TermUnit__c.field-meta.xml
<CustomField>
    <fullName>FNS_TermUnit__c</fullName>
    <label>Term Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>