force-app/main/default/objects/FNS_FinancialAccountTransaction__c/fields/FNS_TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>FNS_TransactionDate__c</fullName>
    <label>Requested Closing Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>