force-app/main/default/objects/FNS_FinancialAccountTransaction__c/recordTypes/FNS_FinancialAccountTransaction.recordType-meta.xml
<RecordType>
    <fullName>FNS_FinancialAccountTransaction</fullName>
    <active>true</active>
    <label>Loan</label>
</RecordType>