force-app/main/default/objects/FNS_FinancialAccountTransaction__c/recordTypes/FNS_FinancialAccountTransactionReadOnly.recordType-meta.xml
<RecordType>
    <fullName>FNS_FinancialAccountTransactionReadOnly</fullName>
    <active>true</active>
    <label>Loan Read Only</label>
</RecordType>