force-app/main/default/objects/FNS_FinancialAccountTransaction__c/validationRules/FNS_LoanNonFSCCannotBeEdited.validationRule-meta.xml
<ValidationRule>
    <fullName>FNS_LoanNonFSCCannotBeEdited</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()), NOT(ISCHANGED( FNS_BypassValidation__c ) ), 
RecordType.DeveloperName == &#39;FNS_FinancialAccountTransactionReadOnly&#39;, 
NOT( ISCHANGED(RecordTypeId ) ) )</errorConditionFormula>
    <errorMessage>Loan cannot be edited at this time because your application has already been submitted.</errorMessage>
</ValidationRule>