force-app/main/default/objects/FNS_FinancialAccountTransaction__c/listViews/FNS_FinancialAccountTransactions.listView-meta.xml
<ListView>
    <fullName>FNS_FinancialAccountTransactions</fullName>
    <columns>NAME</columns>
    <columns>FNS_FinancialAccount__c</columns>
    <columns>FNS_Application__c</columns>
    <columns>FNS_Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Loans</label>
</ListView>